--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p id = "result">
     Resultado
   </p>
-  <img id = "l1" src='https://i.postimg.cc/26N6Vf27/Loff.png' border='0' alt='Loff'/><br>
+  <img id = "l1" src='Loff.png' border='0' alt='Loff'/><br>
   <button type= "button" onclick= "mudar()">
   Ligar</button><br>
   
