--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button type= "button" onclick= "mudar()">
   Ligar</button><br>
   
-<button type= “button” onclick= "desligar()">
+<button type= "button" onclick= "desligar()">
   Desligar</button>
   <script src="dash.js"></script>
   </body>
