--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <button type= "button" onclick= "desligar()">
   Desligar</button>
   <script src="dash.js"></script>
+  <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1637065/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>  
   </body>
 </html>
