--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     Resultado
   </p>
   <img id = "l1" src='Loff.png' border='0' alt='Loff'/><br>
-  <button type= "button" onclick= "mudar()">
-  Ligar</button><br>
+    <div>
+      <button type= "button" onclick= "mudar()">
+        Ligar</button><br>
   
-<button type= "button" onclick= "desligar()">
-  Desligar</button>
+      <button type= "button" onclick= "desligar()">
+        Desligar</button>
+   </div>
   <script src="dash.js"></script>
   <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1637065/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>  
   </body>
